# solar_cplus

./: .gitignore  3D_COMPILATION_REPORT.md  3dsun.json  BUILD_AND_RUN.md  BUILD_AND_RUN_FINAL.md  CHANGELOG.md  CMakeLists.txt  COMPILATION_REPORT.md  CONTRIBUTING.md  INTERFACE_3D_RECOMPILATION_REPORT.md  INTERFACE_UPDATE_COMPILATION_REPORT.md  LATEST_COMPILATION_REPORT.md  LICENSE  NEW_COMPILATION_REPORT.md  QT_DEPLOYMENT_GUIDE.md  README.md  arci.bat  run_3d_app.bat  run_app.bat  run_debug.bat  sunsys3.json  v6.json  vcpkg.json  vr4.json
src/core/: CelestialBody.h  PhysicsEngine.h
src/ui/: InteractiveView.h  MainWindow.cpp  MainWindow.h  OrbitGrid.h  OrbitTrail.h
tests/: TestPhysics.cpp
